@@ -1,3 +1,13 @@
+2011-08-19  Pavel Podivilov  <podivilov@chromium.org>
+
+        Web Inspector: update scope variables upon value changes via console.
+        https://bugs.webkit.org/show_bug.cgi?id=54720
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/ScriptsPanel.js:
+        (WebInspector.ScriptsPanel.prototype.evaluateInSelectedCallFrame):
+
 2011-08-18  Pavel Podivilov  <podivilov@chromium.org>
 
         Web Inspector: extract breakpoint management code to a separate class and add tests.
